@@ -1,3 +1,11 @@
+2011-07-14  Janis Johnson  <janisjo@codesourcery.com>
+
+	* lib/target-supports.exp (check_effective_target_arm_dsp): New.
+	* gcc.target/arm/wmul-1.c: Use it instead of specific -march.
+	* gcc.target/arm/wmul-2.c: Likewise.
+	* gcc.target/arm/wmul-3.c: Likewise.
+	* gcc.target/arm/wmul-4.c: Likewise.
+
 2011-07-14  Andrew Pinski  <pinskia@gmail.com>
 
 	PR tree-opt/49309
